Fix overflow in vote options

--- a/front-end/src/components/vote-card.css
+++ b/front-end/src/components/vote-card.css
@@ -35,6 +35,7 @@
 
 .VoteOptionDescription {
     text-align: justify;
+    overflow-wrap: anywhere;
 }
 
 .VoteResultPanel {
